# End-to-End-Medical-Chatbot

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py  store_index.py  template.py  template.sh
src/: helper.py  prompt.py
static/: style.css
templates/: chat.html
