[project]
name = "end-to-end-medical-chatbot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.8",
    "flask==3.1.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain==0.3.26",
    "langchain-community==0.3.26",
    "langchain-ollama==0.3.10",
    "langchain-openai==0.3.24",
    "langchain-pinecone==0.2.8",
    "mem0ai>=2.0.0",
    "notebook>=7.5.5",
    "ollama==0.6.1",
    "pypdf==5.6.1",
    "python-dotenv==1.1.0",
    "sentence-transformers==4.1.0",
]
